@@ -39,27 +39,34 @@
 #  endif
 # endif
 
-# ifndef HAVE_GSS_OID_EQUAL
+# if ! HAVE_GSS_OID_EQUAL
+
 extern int gss_oid_equal (const gss_OID first_oid, const gss_OID second_oid);
+
 # endif/* HAVE_GSS_OID_EQUAL */
 
-# ifndef HAVE_GSS_INQUIRE_MECH_FOR_SASLNAME
+# if ! HAVE_GSS_INQUIRE_MECH_FOR_SASLNAME
+
 OM_uint32
 gss_inquire_mech_for_saslname (OM_uint32 * minor_status,
 			       const gss_buffer_t sasl_mech_name,
 			       gss_OID * mech_type);
 # endif/* HAVE_GSS_INQUIRE_MECH_FOR_SASLNAME */
 
-# ifndef HAVE_GSS_ENCAPSULATE_TOKEN
+# if ! HAVE_GSS_ENCAPSULATE_TOKEN
+
 extern OM_uint32
 gss_encapsulate_token (const gss_buffer_t input_token,
 		       const gss_OID token_oid, gss_buffer_t output_token);
+
 # endif/* HAVE_GSS_ENCAPSULATE_TOKEN */
 
-# ifndef HAVE_GSS_DECAPSULATE_TOKEN
+# if ! HAVE_GSS_DECAPSULATE_TOKEN
+
 OM_uint32
 gss_decapsulate_token (const gss_buffer_t input_token,
 		       const gss_OID token_oid, gss_buffer_t output_token);
-# endif
+
+# endif/* HAVE_GSS_DECAPSULATE_TOKEN */
 
 #endif /* GSS_EXTRA_H */
